Last check before first submit

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -548,7 +548,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -581,56 +583,14 @@
     "           \n",
     "__Question 4:__ Outline the steps you took to get to your final CNN architecture and your reasoning at each step.  If you chose to use the hinted architecture above, describe why you think that CNN architecture should work well for the image classification task.\n",
     "\n",
-    "__Answer:__ "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tst = Conv2D(32, 2, activation='relu', input_shape=train_tensors.shape[1:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'conv2d_4',\n",
-       " 'trainable': True,\n",
-       " 'batch_input_shape': (None, 224, 224, 3),\n",
-       " 'dtype': 'float32',\n",
-       " 'filters': 32,\n",
-       " 'kernel_size': (2, 2),\n",
-       " 'strides': (1, 1),\n",
-       " 'padding': 'valid',\n",
-       " 'data_format': 'channels_last',\n",
-       " 'dilation_rate': (1, 1),\n",
-       " 'groups': 1,\n",
-       " 'activation': 'relu',\n",
-       " 'use_bias': True,\n",
-       " 'kernel_initializer': {'class_name': 'GlorotUniform',\n",
-       "  'config': {'seed': None}},\n",
-       " 'bias_initializer': {'class_name': 'Zeros', 'config': {}},\n",
-       " 'kernel_regularizer': None,\n",
-       " 'bias_regularizer': None,\n",
-       " 'activity_regularizer': None,\n",
-       " 'kernel_constraint': None,\n",
-       " 'bias_constraint': None}"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tst.get_config()"
+    "__Answer:__ \n",
+    "I chose to test out the architecture above, but also test VGG16 and SqueezeNet. I was particularly interested in SqueezeNet coming with the promise of a much smaller output model, compared to VGG16, which seems much harder to deploy.\n",
+    "\n",
+    "It is hard to tell whether the architecture above will be good or not at classifying images, the only way to know is to really train it and see if it achieves a reasonable level of accuracy on the validation data. \n",
+    "\n",
+    "The architecture is directed at narrowing the image and producing many different image filters, that can each capture elements of an image. In the end there are 64 filters that could activate for various features, but it is hard to tell if the choice of 64 is a good fit. It might be that there are many more features that need to be activated for given that we are looking at 133 different dog-races.\n",
+    "\n",
+    "Trying to train VGG16 and SqueezeNet proved difficult, even with the aid of a GPU. They took very long time to achieve any sort of decrease in loss, and memory wise the SqueezeNet was very intensive."
    ]
   },
   {
@@ -855,13 +815,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "from keras.optimizers import Adam, SGD, RMSprop\n",
     "#opt = RMSprop()\n",
-    "#opt = Adam(lr=0.001)\n",
-    "opt = SGD(lr=0.01, momentum=0.9)\n",
+    "#opt = SGD(lr=0.01, momentum=0.9)\n",
+    "opt = Adam(lr=0.001)\n",
     "model.compile(optimizer=opt, loss='categorical_crossentropy', metrics=['accuracy'])"
    ]
   },
@@ -877,17 +839,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "!curl -O https://raw.githubusercontent.com/udacity/workspaces-student-support/master/jupyter/workspace_utils.py"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "scrolled": true
-   },
+   "outputs": [],
    "source": [
     "from keras.callbacks import ModelCheckpoint, History\n",
     "\n",
@@ -1273,7 +1228,10 @@
     "__Question 5:__ Outline the steps you took to get to your final CNN architecture and your reasoning at each step.  Describe why you think the architecture is suitable for the current problem.\n",
     "\n",
     "__Answer:__ \n",
-    "\n"
+    "\n",
+    "The global average pooling 2D layer is in place to ajust the bottleneck feature layer to our purpose, which is to fit it to the size of our data features present in the ```train_vgg19``` data.\n",
+    "I add some dropout in order to control for overfitting, and batch normalization is there in order to speed up learning.\n",
+    "The final fully connected dense layer is there to output the probabilities of an image to the 133 classes, hence the softmax activation function."
    ]
   },
   {
@@ -1593,7 +1551,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### TODO: Load the model weights with the best validation loss.\n",
+    "### Load the model weights with the best validation loss.\n",
     "model.load_weights('saved_models/weights.best.vgg19.hdf5')"
    ]
   },
@@ -1731,7 +1689,8 @@
     "\n",
     "__Question 6:__ Is the output better than you expected :) ?  Or worse :( ?  Provide at least three possible points of improvement for your algorithm.\n",
     "\n",
-    "__Answer:__ "
+    "__Answer:__ \n",
+    "The output is quite good, and at times entertaining. Some dog races assigned to humans really do seem to correspond. The dog race detector does miss the classes some times, and it seems there is potential room for improvement there. One could begin to augment data in order to create more samples for training. Also the architecture after bottleneck features could be augmented with further layers in order to potentially capture more variety in the dog races dataset. Another way to improve could be to work on selecting other hyperparameters, in order to finder better convergence."
    ]
   },
   {
@@ -1896,7 +1855,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
