Added section about visualizing training loss and section about keeping instance active

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -867,6 +867,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Train the Model on instance and keeping session active"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This section is added in order to train a model over long time using the Udacity workspace. The workspace can become inactive after a period of time, so a script is used in order to keep it active while staring long running training sessions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!curl -O https://raw.githubusercontent.com/udacity/workspaces-student-support/master/jupyter/workspace_utils.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.callbacks import ModelCheckpoint, History\n",
+    "\n",
+    "### TODO: specify the number of epochs that you would like to use to train the model.\n",
+    "\n",
+    "epochs = 60\n",
+    "\n",
+    "### Do NOT modify the code below this line.\n",
+    "\n",
+    "checkpointer = ModelCheckpoint(filepath='saved_models/weights.best.from_scratch.hdf5', \n",
+    "                               verbose=1, save_best_only=True)\n",
+    "\n",
+    "# Creating history callback so we can inspect how training went\n",
+    "history = History()\n",
+    "\n",
+    "# Using workspace utils to keep udacity workspace alive\n",
+    "from workspace_utils import active_session\n",
+    " \n",
+    "with active_session():\n",
+    "    model.fit(train_tensors, train_targets, \n",
+    "              validation_data=(valid_tensors, valid_targets),\n",
+    "              epochs=epochs, batch_size=10, callbacks=[checkpointer, history], verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize training loss and accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax = plt.subplots()\n",
+    "ax.plot(history.history['loss'])\n",
+    "ax.plot(history.history['val_loss']);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax = plt.subplots()\n",
+    "ax.plot(history.history['acc'])\n",
+    "ax.plot(history.history['val_acc']);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Load the Model with the Best Validation Loss"
    ]
   },
